--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,11 @@ services:
     volumes:
       - .:/app:delegated
       - ./.container:/root
+    command:
+      - bundle
+      - exec
+      - rackup
+      - --host
+      - 0.0.0.0
     ports:
-      - 4567:4567
+      - 9292:9292
